samples/_failures_safe/1761203402_824e0f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50766035.c: In function ‘main’:
./samples/SAFE/__tmp_50766035.c:174:13: error: expected ‘,’ or ‘;’ at end of input
  174 |             long num = strtol
      |             ^~~~
./samples/SAFE/__tmp_50766035.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_50766035.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_50766035.c:174:13: error: expected declaration or statement at end of input
